--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 10%; margin-left: 3.5%">
         <h4>FARMLABS Repositories</h4>
-        <p>This Page lists all repos at <a href="http://www.farmlabs.org">Farm Labs</a>.</p>
+        <p>This Page lists all repos at <a href="http://www.farmlabs.org">Farm Labs</a>:</p>
+        <ol>
+          <li> <a href="https://github.com/Farmlabs/graphics">Logos and other useful Graphic Resources</a>;</li>
+          <li> <a href="https://github.com/Farmlabs/farmlabs.org">Project Site Design</a>;</li>
+          <li> <a href="#"><strike>farmlabs.cc Creative Commons Awesome Fund Open Agriculture Repository Project</strike></a>;</li>
+        </ol>
       </div>
     </div>
   </div>
