--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
           <li> <a href="https://github.com/Farmlabs/farmlabs.org">Project Site Design</a>;</li>
           <li> <a href="#"><strike>farmlabs.cc Creative Commons Awesome Fund Open Agriculture Repository Project</strike></a>;</li>
         </ol>
+        <p></p>
+        <p>Join us through our <a href="http://farmlabs.slack.com">SLACK</a>!</p>
       </div>
     </div>
   </div>
